[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-wrapped"
version = "0.1.0"
description = "Your AI coding agent, wrapped — locally. Reads Claude Code (v0.1) transcripts and prints a personal usage report. Zero dependencies. No data leaves your machine."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "The agent-wrapped contributors" }]
keywords = [
    "ai", "agent", "ai-agent", "coding-agent", "claude", "claude-code", "claude-ai",
    "anthropic", "llm", "llm-analytics", "wrapped", "year-in-review", "analytics",
    "cli", "developer-tools", "productivity", "local-first", "privacy",
    "no-dependencies", "self-hosted",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/mallikharjun073/agent-wrapped"
Issues   = "https://github.com/mallikharjun073/agent-wrapped/issues"
Source   = "https://github.com/mallikharjun073/agent-wrapped"

[project.scripts]
agent-wrapped = "agent_wrapped:main"

[tool.setuptools]
py-modules = ["agent_wrapped"]
